--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: ikhsan #sesuaikan ns
+  name: leska #sesuaikan ns
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: my-eks-pipeline-deployment
-  namespace: ikhsan #sesuaikan ns
+  namespace: leska #sesuaikan ns
   labels:
     app: my-eks-pipeline-deployment
 spec:
